files/iptables/iptables@sb-mon01
## Mananged by Puppet ##
## puppetfile: iptables/iptables@sb-mon01
##
## uncomplicated iptables firewall example
## single zone, no output filter
## Fine for a non-critical host on the LAN, not exposed, like a monitoring server
## GPLv3 https://github.com/ballestr/puppet-firewall
## Sergio.Ballestrero@gmail.com, 2017-01

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

############ _chain.NOISEDROP start
### quietly drop the uninteresting lan spam
:NOISEDROP - [0:0]
-A NOISEDROP -p icmp --icmp-type 8 -m limit --limit 10/min -j LOG --log-prefix "fwPING_QUIET " --log-level 6
-A NOISEDROP -p icmp --icmp-type 8 -j DROP
-A NOISEDROP -p icmp --icmp-type 9 -j DROP
-A NOISEDROP -p igmp -j DROP
-A NOISEDROP -p udp -m pkttype --pkt-type broadcast --sport 68 --dport 67 -j DROP 
-A NOISEDROP -p udp -m pkttype --pkt-type broadcast --sport 67 --dport 68 -j DROP 
-A NOISEDROP -p udp -m pkttype --pkt-type broadcast --sport 631 --dport 631 -j DROP
-A NOISEDROP -p udp -m pkttype --pkt-type broadcast --dport ntp -j DROP 
-A NOISEDROP -p udp --sport mdns --dport mdns -j DROP
## Microsoft
-A NOISEDROP -p tcp -m pkttype --pkt-type broadcast --dport 135:139 -j DROP
-A NOISEDROP -p udp -m pkttype --pkt-type broadcast --dport 135:139 -j DROP
-A NOISEDROP -p udp --dport 137 -j DROP
-A NOISEDROP -p tcp --dport microsoft-ds -j DROP
-A NOISEDROP -p udp -m pkttype --pkt-type broadcast --dport 1211 -j DROP
## misc
-A NOISEDROP -p udp -m pkttype --pkt-type broadcast --sport 57621 --dport 57621 -j DROP -m comment --comment "Spotify"
-A NOISEDROP -p udp -m pkttype --pkt-type broadcast --sport 17500 --dport 17500 -j DROP -m comment --comment "DropBox LanSync"
-A NOISEDROP -p udp -m pkttype --pkt-type broadcast --dport 1947 -j DROP -m comment --comment "Aladdin HASP license manager" 
-A NOISEDROP -p udp -m pkttype --pkt-type broadcast --dport 3956 -j DROP -m comment --comment "GigE Vision discovery" 
-A NOISEDROP -p udp -m pkttype --pkt-type broadcast -j DROP -m comment --comment "UPD Broadcast"
## CERT scans on all ports
-A NOISEDROP -s cert-op-004.example.lan -j DROP
-A NOISEDROP -s cert-op-005.example.lan -j DROP
-A NOISEDROP -s cert-op-006.example.lan -j DROP
############ _chain.NOISEDROP end


-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
#-A INPUT -m state --state NEW -m udp -p udp --dport 7001 -j ACCEPT
#-A INPUT -m state --state NEW -m tcp -p tcp --dport 4241 -j ACCEPT
## Monitoring Client: accept Prometheus node_export queries
-A INPUT -m state --state NEW -m tcp -p tcp --dport 9100 -j ACCEPT -m comment --comment "node_export"
## Monitoring Server: accept Ganglia incoming UDP
-A INPUT -m state --state NEW -m udp -p udp --dport 8649 -j ACCEPT -m comment --comment "Ganglia"
-A INPUT -m state --state NEW -m udp -p udp --dport 6343 -j ACCEPT -m comment --comment "Ganglia sFlow"
## log and reject
-A INPUT -j NOISEDROP
-A INPUT -j LOG --log-level 6 --log-uid -m limit --limit 10/minute --log-prefix "fwINPUT_REJECT "
-A INPUT -j REJECT --reject-with icmp-host-prohibited

-A FORWARD -j REJECT --reject-with icmp-host-prohibited


COMMIT
